# zero-to-production-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
